// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HeatMapChart snapshot tests should render HeatMapChart correctly with numeric datapoints 1`] = `
<div>
  <div
    class="fui-cart__root"
    id="chart_"
    role="presentation"
  >
    <div
      class="fui-cart__chartWrapper"
      data-tabster="{\\"mover\\":{\\"cyclic\\":false,\\"direction\\":2,\\"memorizeCurrent\\":true}}"
    >
      <svg
        aria-label="Heat map chart with 4 data points. "
        height="300"
        style="display: block;"
        width="650"
      >
        <g
          class="fui-cart__xAxis"
          fill="none"
          font-family="sans-serif"
          font-size="10"
          id="xAxisGElementchart_"
          text-anchor="middle"
          transform="translate(0, 265)"
        >
          <path
            class="domain"
            d="M40.5,0.5H630.5"
            stroke="currentColor"
          />
          <g
            class="tick"
            opacity="1"
            transform="translate(188.96039603960392,0)"
          >
            <line
              stroke="currentColor"
              y2="0"
            />
            <text
              aria-hidden="true"
              dy="0.71em"
              fill="currentColor"
              y="10"
            >
              30
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(481.039603960396,0)"
          >
            <line
              stroke="currentColor"
              y2="0"
            />
            <text
              aria-hidden="true"
              dy="0.71em"
              fill="currentColor"
              y="10"
            >
              40
            </text>
          </g>
        </g>
        <g
          class="fui-cart__yAxis"
          fill="none"
          font-family="sans-serif"
          font-size="10"
          id="yAxisGElementchart_"
          text-anchor="end"
          transform="translate(40, 0)"
        >
          <path
            class="domain"
            d="M0.5,265.5V20.5"
            stroke="currentColor"
          />
          <g
            class="tick"
            opacity="1"
            transform="translate(0,203.14356435643566)"
          >
            <line
              stroke="currentColor"
              x2="0"
            />
            <text
              dy="0.32em"
              fill="currentColor"
              text-align="start"
              x="-10"
            >
              <tspan
                data-="10"
                dy="0.32em"
                id="BaseSpan-0"
                x="-10"
              />
              <tspan
                dx="1em"
                id="LessLength-0"
                x="-10"
              >
                10
              </tspan>
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(0,81.85643564356437)"
          >
            <line
              stroke="currentColor"
              x2="0"
            />
            <text
              dy="0.32em"
              fill="currentColor"
              text-align="start"
              x="-10"
            >
              <tspan
                data-="20"
                dy="0.32em"
                id="BaseSpan-1"
                x="-10"
              />
              <tspan
                dx="1em"
                id="LessLength-1"
                x="-10"
              >
                20
              </tspan>
            </text>
          </g>
        </g>
        <g
          aria-label="Lorem ipsum dolor sit amet"
          fill-opacity="1"
          role="img"
          tabindex="0"
          transform="translate(45.8415841584158, 22.42574257425744)"
        >
          <rect
            fill="rgb(151, 189, 219)"
            height="118.86138613861385"
            width="286.23762376237624"
          />
          <text
            class="fui-hmc__text"
            dominant-baseline="middle"
            fill="var(--colorNeutralForeground1)"
            text-anchor="middle"
            transform="translate(143.11881188118812, 59.430693069306926)"
          />
        </g>
        <g
          aria-label="ut labore et dolore magna aliqua"
          fill-opacity="1"
          role="img"
          tabindex="0"
          transform="translate(337.9207920792079, 22.42574257425744)"
        >
          <rect
            fill="rgb(166, 207, 226)"
            height="118.86138613861385"
            width="286.23762376237624"
          />
          <text
            class="fui-hmc__text"
            dominant-baseline="middle"
            fill="var(--colorNeutralForeground1)"
            text-anchor="middle"
            transform="translate(143.11881188118812, 59.430693069306926)"
          />
        </g>
        <g
          aria-label="sed do eiusmod tempor incididunt"
          fill-opacity="1"
          role="img"
          tabindex="0"
          transform="translate(45.8415841584158, 143.71287128712873)"
        >
          <rect
            fill="rgb(159, 198, 222)"
            height="118.86138613861385"
            width="286.23762376237624"
          />
          <text
            class="fui-hmc__text"
            dominant-baseline="middle"
            fill="var(--colorNeutralForeground1)"
            text-anchor="middle"
            transform="translate(143.11881188118812, 59.430693069306926)"
          />
        </g>
        <g
          aria-label="consectetur adipiscing elit"
          fill-opacity="1"
          role="img"
          tabindex="0"
          transform="translate(337.9207920792079, 143.71287128712873)"
        >
          <rect
            fill="rgb(144, 180, 215)"
            height="118.86138613861385"
            width="286.23762376237624"
          />
          <text
            class="fui-hmc__text"
            dominant-baseline="middle"
            fill="var(--colorNeutralForeground1)"
            text-anchor="middle"
            transform="translate(143.11881188118812, 59.430693069306926)"
          />
        </g>
      </svg>
    </div>
    <div
      class="fui-cart__legendContainer"
    >
      <div
        aria-label="Legends"
        aria-multiselectable="false"
        class="fui-legend__root"
        data-tabster="{\\"mover\\":{\\"cyclic\\":false,\\"direction\\":2,\\"memorizeCurrent\\":true}}"
        role="listbox"
      >
        <div
          class="fui-Overflow fui-legend__resizableArea"
          style="text-align: unset;"
        >
          <button
            aria-label="Excellent"
            aria-selected="false"
            class="fui-Button fui-legend__legend"
            data-overflow-item=""
            role="option"
            style="--rect-height: 12px; --rect-backgroundColor: rgb(144, 180, 215); --rect-borderColor: rgb(144, 180, 215);"
            type="button"
          >
            <div
              class="fui-legend__rect"
              style="height: 12px; background-color: rgb(144, 180, 215); border-color: rgb(144, 180, 215); --rect-content-high-contrast: linear-gradient(to right, rgb(144, 180, 215), rgb(144, 180, 215));"
            />
            <div
              class="fui-legend__text"
            >
              Excellent
            </div>
          </button>
          <button
            aria-label="Nasty"
            aria-selected="false"
            class="fui-Button fui-legend__legend"
            data-overflow-item=""
            role="option"
            style="--rect-height: 12px; --rect-backgroundColor: rgb(115, 144, 200); --rect-borderColor: rgb(115, 144, 200);"
            type="button"
          >
            <div
              class="fui-legend__rect"
              style="height: 12px; background-color: rgb(115, 144, 200); border-color: rgb(115, 144, 200); --rect-content-high-contrast: linear-gradient(to right, rgb(115, 144, 200), rgb(115, 144, 200));"
            />
            <div
              class="fui-legend__text"
            >
              Nasty
            </div>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`HeatMapChart snapshot tests should render axis labels correctly When custom formatter functions are set for x and y axis strings 1`] = `
<div>
  <div
    class="fui-cart__root"
    id="chart_"
    role="presentation"
  >
    <div
      class="fui-cart__chartWrapper"
      data-tabster="{\\"mover\\":{\\"cyclic\\":false,\\"direction\\":2,\\"memorizeCurrent\\":true}}"
    >
      <svg
        aria-label="Heat map chart with 4 data points. "
        height="300"
        style="display: block;"
        width="650"
      >
        <g
          class="fui-cart__xAxis"
          fill="none"
          font-family="sans-serif"
          font-size="10"
          id="xAxisGElementchart_"
          text-anchor="middle"
          transform="translate(0, 265)"
        >
          <path
            class="domain"
            d="M40.5,0.5H630.5"
            stroke="currentColor"
          />
          <g
            class="tick"
            opacity="1"
            transform="translate(188.96039603960392,0)"
          >
            <line
              stroke="currentColor"
              y2="0"
            />
            <text
              aria-hidden="true"
              dy="0.71em"
              fill="currentColor"
              y="10"
            >
              xPoint p3
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(481.039603960396,0)"
          >
            <line
              stroke="currentColor"
              y2="0"
            />
            <text
              aria-hidden="true"
              dy="0.71em"
              fill="currentColor"
              y="10"
            >
              xPoint p4
            </text>
          </g>
        </g>
        <g
          class="fui-cart__yAxis"
          fill="none"
          font-family="sans-serif"
          font-size="10"
          id="yAxisGElementchart_"
          text-anchor="end"
          transform="translate(40, 0)"
        >
          <path
            class="domain"
            d="M0.5,265.5V20.5"
            stroke="currentColor"
          />
          <g
            class="tick"
            opacity="1"
            transform="translate(0,203.14356435643566)"
          >
            <line
              stroke="currentColor"
              x2="0"
            />
            <text
              dy="0.32em"
              fill="currentColor"
              text-align="start"
              x="-10"
            >
              <tspan
                data-="yPoint p1"
                dy="0.32em"
                id="BaseSpan-0"
                x="-10"
              />
              <tspan
                dx="1em"
                id="LessLength-0"
                x="-10"
              >
                yPoint p1
              </tspan>
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(0,81.85643564356437)"
          >
            <line
              stroke="currentColor"
              x2="0"
            />
            <text
              dy="0.32em"
              fill="currentColor"
              text-align="start"
              x="-10"
            >
              <tspan
                data-="yPoint p2"
                dy="0.32em"
                id="BaseSpan-1"
                x="-10"
              />
              <tspan
                dx="1em"
                id="LessLength-1"
                x="-10"
              >
                yPoint p2
              </tspan>
            </text>
          </g>
        </g>
        <g
          aria-label="xPoint p3, yPoint p2. Nasty, 25."
          fill-opacity="1"
          role="img"
          tabindex="0"
          transform="translate(45.8415841584158, 22.42574257425744)"
        >
          <rect
            fill="rgb(166, 207, 226)"
            height="118.86138613861385"
            width="286.23762376237624"
          />
          <text
            class="fui-hmc__text"
            dominant-baseline="middle"
            fill="var(--colorNeutralForeground1)"
            text-anchor="middle"
            transform="translate(143.11881188118812, 59.430693069306926)"
          >
            25
          </text>
        </g>
        <g
          aria-label="xPoint p4, yPoint p2. Excellent, 100."
          fill-opacity="1"
          role="img"
          tabindex="0"
          transform="translate(337.9207920792079, 22.42574257425744)"
        >
          <rect
            fill="rgb(144, 180, 215)"
            height="118.86138613861385"
            width="286.23762376237624"
          />
          <text
            class="fui-hmc__text"
            dominant-baseline="middle"
            fill="var(--colorNeutralForeground1)"
            text-anchor="middle"
            transform="translate(143.11881188118812, 59.430693069306926)"
          >
            100
          </text>
        </g>
        <g
          aria-label="xPoint p3, yPoint p1. Excellent, 75."
          fill-opacity="1"
          role="img"
          tabindex="0"
          transform="translate(45.8415841584158, 143.71287128712873)"
        >
          <rect
            fill="rgb(151, 189, 219)"
            height="118.86138613861385"
            width="286.23762376237624"
          />
          <text
            class="fui-hmc__text"
            dominant-baseline="middle"
            fill="var(--colorNeutralForeground1)"
            text-anchor="middle"
            transform="translate(143.11881188118812, 59.430693069306926)"
          >
            75
          </text>
        </g>
        <g
          aria-label="xPoint p4, yPoint p1. Nasty, 50."
          fill-opacity="1"
          role="img"
          tabindex="0"
          transform="translate(337.9207920792079, 143.71287128712873)"
        >
          <rect
            fill="rgb(159, 198, 222)"
            height="118.86138613861385"
            width="286.23762376237624"
          />
          <text
            class="fui-hmc__text"
            dominant-baseline="middle"
            fill="var(--colorNeutralForeground1)"
            text-anchor="middle"
            transform="translate(143.11881188118812, 59.430693069306926)"
          >
            50
          </text>
        </g>
      </svg>
    </div>
    <div
      class="fui-cart__legendContainer"
    >
      <div
        aria-label="Legends"
        aria-multiselectable="false"
        class="fui-legend__root"
        data-tabster="{\\"mover\\":{\\"cyclic\\":false,\\"direction\\":2,\\"memorizeCurrent\\":true}}"
        role="listbox"
      >
        <div
          class="fui-Overflow fui-legend__resizableArea"
          style="text-align: unset;"
        >
          <button
            aria-label="Excellent"
            aria-selected="false"
            class="fui-Button fui-legend__legend"
            data-overflow-item=""
            role="option"
            style="--rect-height: 12px; --rect-backgroundColor: rgb(144, 180, 215); --rect-borderColor: rgb(144, 180, 215);"
            type="button"
          >
            <div
              class="fui-legend__rect"
              style="height: 12px; background-color: rgb(144, 180, 215); border-color: rgb(144, 180, 215); --rect-content-high-contrast: linear-gradient(to right, rgb(144, 180, 215), rgb(144, 180, 215));"
            />
            <div
              class="fui-legend__text"
            >
              Excellent
            </div>
          </button>
          <button
            aria-label="Nasty"
            aria-selected="false"
            class="fui-Button fui-legend__legend"
            data-overflow-item=""
            role="option"
            style="--rect-height: 12px; --rect-backgroundColor: rgb(115, 144, 200); --rect-borderColor: rgb(115, 144, 200);"
            type="button"
          >
            <div
              class="fui-legend__rect"
              style="height: 12px; background-color: rgb(115, 144, 200); border-color: rgb(115, 144, 200); --rect-content-high-contrast: linear-gradient(to right, rgb(115, 144, 200), rgb(115, 144, 200));"
            />
            <div
              class="fui-legend__text"
            >
              Nasty
            </div>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;
